--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,7 @@
     "@angular/cdk": "^16.0.1",
     "@angular/material": "^16.0.1",
     "bootstrap": "^5.2.3",
+    "ngx-cookie-service": "^16.0.0",
     "ngx-toastr": "^17.0.2"
   }
 }
